Closed
Bug 1703464
Opened 5 years ago
Closed 5 years ago
CORP check should be bypassed when the LoadingPrincipal is a SystemPrincipal
Categories
(Core :: DOM: Networking, defect, P3)
Core
DOM: Networking
Tracking
()
RESOLVED
FIXED
89 Branch
| Tracking | Status | |
|---|---|---|
| firefox89 | --- | fixed |
People
(Reporter: tt, Assigned: tt)
References
(Regression)
Details
(Keywords: regression, Whiteboard: [necko-triaged])
Attachments
(1 file)
STR:
- Ensure
dom.security.secFetch.enabledisfalse(Nightly istrueby default) - Open https://translate.google.com/
- Click "Add Search Engine" from the page actions menu in the location bar.
Actual Result:
- Download Error and the status code is
NS_ERROR_DOM_CORP_FAILED.
Expected Result:
- The search engine is successfully added.
The CORP check is here and it seems that the check assume the loading principal cannot be a system principal.
| Assignee | ||
Updated•5 years ago
|
Component: Search → DOM: Networking
Product: Firefox → Core
| Assignee | ||
Comment 1•5 years ago
|
||
Updated•5 years ago
|
Attachment #9214007 -
Attachment description: WIP: Bug 1703464 - Bypass the CORP check when the loading principal is a system principal; → Bug 1703464 - Bypass the CORP check when the loading principal is a system principal;
Updated•5 years ago
|
Severity: -- → S2
Priority: -- → P3
Updated•5 years ago
|
Whiteboard: [necko-triaged]
Pushed by shes050117@gmail.com:
https://hg.mozilla.org/integration/autoland/rev/41655bc31215
Bypass the CORP check when the loading principal is a system principal; r=necko-reviewers,dragana
Updated•5 years ago
|
Has Regression Range: --- → yes
Comment 3•5 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 5 years ago
status-firefox89:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 89 Branch
Updated•5 years ago
|
Keywords: regression
Comment 4•5 years ago
|
||
For reference: this caused bug 1698755, so maybe this is worth backporting to 78 branch.
You need to log in
before you can comment on or make changes to this bug.
Description
•