Bug 1703464 - Bypass the CORP check when the loading principal is a system principal; r=necko-reviewers,dragana

Differential Revision: https://phabricator.services.mozilla.com/D111056